# ntruong

./: .gitignore  CNAME  Makefile  README.md  index.html  n-truong.cabal  ntruong.cabal  publish.sh  site.hs  update.sh
_site/: index.html
_site/css/: article.css  default.css  style.css
_site/notes/: index.html
_site/notes/algebra/: cyclic-groups.html  groups.html  homomorphisms.html  index.html  rings.html
_site/tags/: fields.html  groups.html  homomorphisms.html  rings.html  subgroups.html
css/: article.css  default.css  index.css  note.css  style.css
js/: main.js
notes/: index.html
notes/algebra/: cyclic-groups.md  groups.md  homomorphisms.md  index.md  rings.md  test.md
notes/data-mining/: index.html
tags/: test.html
templates/: article.html  book.html  default.html  list.html  note.html  notebook.html  tag.html
