name:               ntruong
version:            0.1.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , binary == 0.8.*
                  , containers == 0.5.11.*
                  , hakyll == 4.12.*
                  , pandoc == 2.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
